--- a/AutoCadPlugin/View/PluginWindow.xaml
+++ b/AutoCadPlugin/View/PluginWindow.xaml
@@ -5,12 +5,93 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:local="clr-namespace:AutoCadPlugin.View"
-             xmlns:util="clr-namespace:AutoCadPlugin.Util"
+             xmlns:util="clr-namespace:AutoCadPlugin.Util" 
              mc:Ignorable="d" 
              d:DesignHeight="350" d:DesignWidth="500" Foreground="White" Background="DimGray">
     <UserControl.Resources>
         <!-- Определение стилей -->
-        <ResourceDictionary Source="ResourceDictionary.xaml" />
+        <ResourceDictionary>
+            <BooleanToVisibilityConverter x:Key="b2v" />
+            <util:SelectedItemToVisibility x:Key="si2v" />
+
+            <Style TargetType="{x:Type Label}">
+                <Setter Property="Foreground" Value="White" />
+                <Setter Property="VerticalAlignment" Value="Center" />
+            </Style>
+
+            <Style TargetType="{x:Type TextBox}">
+                <Setter Property="Background" Value="DimGray" />
+                <Setter Property="Foreground" Value="White" />
+                <Setter Property="VerticalAlignment" Value="Center" />
+                <Setter Property="BorderBrush" Value="DimGray"/>
+            </Style>
+
+            <Style TargetType="{x:Type TabControl}">
+                <Setter Property="Background" Value="DimGray" />
+                <Setter Property="Foreground" Value="White" />
+            </Style>
+
+            <Style TargetType="{x:Type TabItem}">
+                <Setter Property="Background" Value="DimGray" />
+                <Setter Property="Foreground" Value="White" />
+                <Setter Property="FontWeight" Value="Bold" />
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type TabItem}">
+                            <Grid>
+                                <Border Name="Border" Background="Transparent"
+                                        BorderThickness="0,0,0,0.5"                                        
+                                        BorderBrush="White">
+                                    <ContentPresenter x:Name="ContentSite" VerticalAlignment="Center"
+                                            HorizontalAlignment="Center"
+                                            ContentSource="Header"
+                                            RecognizesAccessKey="True"
+                                            Margin="3,2,3,2">
+                                    </ContentPresenter>
+                                </Border>
+                            </Grid>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsSelected" Value="True">
+                                    <Setter TargetName="Border" Property="Background" Value="DarkGray" />
+                                </Trigger>
+                                <Trigger Property="IsEnabled" Value="False">
+                                    <Setter TargetName="Border" Property="Background" Value="DarkRed" />
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <Style TargetType="{x:Type ListView}">
+                <Setter Property="Background" Value="DimGray" />
+                <Setter Property="Foreground" Value="White" />
+            </Style>
+
+            <Style TargetType="{x:Type GridViewColumnHeader}">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
+                            <Border BorderThickness="0,0,0,1" BorderBrush="White" Background="Transparent">
+                                <TextBlock x:Name="ContentHeader" Text="{TemplateBinding Content}" Padding="5,2,5,2" Width="{TemplateBinding Width}" TextAlignment="Center" />
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+                <Setter Property="OverridesDefaultStyle" Value="True" />
+                <Setter Property="Foreground" Value="White" />
+                <Setter Property="FontWeight" Value="Bold" />
+                <Setter Property="FontFamily" Value="Segoe UI" />
+                <Setter Property="FontSize" Value="12" />
+            </Style>
+
+            <Style TargetType="{x:Type Button}">
+                <Setter Property="Background" Value="DarkGray" />
+                <Setter Property="Foreground" Value="White" />
+                <Setter Property="FontWeight" Value="Bold" />
+                <Setter Property="Width" Value="100" />
+            </Style>
+        </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
